<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2015 Formicary Ltd
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <scm>
    <connection>scm:git@github.com:formicary/remoterun.git</connection>
    <url>scm:git@github.com:formicary/remoterun.git</url>
    <developerConnection>scm:git:git@github.com:formicary/remoterun.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <groupId>net.formicary.remoterun</groupId>
  <artifactId>remoterun</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>common</module>
    <module>agent</module>
    <module>embed</module>
    <module>examples</module>
    <module>dist</module>
  </modules>

  <name>RemoteRun</name>
  <description>Java remote process execution toolkit</description>
  <organization>
    <name>Formicary</name>
    <url>http://www.formicary.net</url>
  </organization>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.version>1.7</jdk.version>
    <!-- mvn clean compile -DprotocExecutable=/usr/local/bin/protoc -->
    <protocExecutable>/usr/bin/protoc</protocExecutable>
  </properties>

  <distributionManagement>
    <repository>
      <id>formicary-nexus</id>
      <name>Internal Releases</name>
      <url>https://nexus.formicary.net/nexus/content/repositories/formicary-releases/</url>
    </repository>
    <snapshotRepository>
      <id>formicary-nexus</id>
      <name>Internal Snapshots</name>
      <url>https://nexus.formicary.net/nexus/content/repositories/formicary-snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12</version>
        <configuration>
          <argLine>-Xmx512m -XX:MaxPermSize=92m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>
      <!-- To force the release-plugin to increment the poms plugin change has been made.
      http://stackoverflow.com/questions/15166781/mvn-releaseprepare-not-committing-changes-to-pom-xml
       -->
      <plugin>
        <inherited>false</inherited>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.4.2</version>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.scm</groupId>
            <artifactId>maven-scm-provider-gitexe</artifactId>
            <version>1.8.1</version>
          </dependency>
        </dependencies>
        <configuration>
          <arguments>-DprotocExecutable=${protocExecutable}</arguments>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.1.2</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>verify</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
